Fix minor spacing issue with navbar

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -1,6 +1,6 @@
 body{
-    background: #e2cdb5;
-    /* background: #e8e1d9; */
+    // background: #e2cdb5;
+    background: #e8e1d9;
     /* background: #fff8f0; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 80%;
@@ -14,9 +14,10 @@ h1{
     letter-spacing: -0.4px;
     color: white;
     cursor: pointer;
+    text-shadow: 0px 1px 2px #7571719e;
 }
 
 
-h1:hover{
-    text-shadow: 0 0 7px white;
-}
+// h1:hover{
+//     text-shadow: 0 0 7px white;
+// }
